--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -2,29 +2,30 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a & */
-@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@600&family=Merienda:wght@900&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #d16666   ;
+  --secondary-color: #dda448 ;
+  --accent1-color: #f1faee;
+  --accent2-color: #a8dadc;
+
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Merienda";
+  --paragraph-font: "Caveat", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --headline-color-on-white: #d16666;  /* headlines on a white background */ 
+  --headline-color-on-color: #f1faee; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #dda448; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #f1faee; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #d16666  ;
+  --nav-link-color: #dda448;
+  --nav-background-color: #f1faee;
+  --nav-hover-link-color: #d16666;
+  --nav-hover-background-color: #a8dadc;
 }
 
 
