--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,10 +6,10 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #d16666   ;
-  --secondary-color: #dda448 ;
-  --accent1-color: #f1faee;
-  --accent2-color: #a8dadc;
+  --primary-color: #F4A261  ;
+  --secondary-color: #E76F51  ;
+  --accent1-color: #2a9d8f;
+  --accent2-color: #264653;
 
 
   /* change the values below to your chosen font(s) */
@@ -17,15 +17,15 @@ Fonts are separated by a & */
   --paragraph-font: "Caveat", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #d16666;  /* headlines on a white background */ 
-  --headline-color-on-color: #f1faee; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #dda448; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #f1faee; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #d16666  ;
-  --nav-link-color: #dda448;
-  --nav-background-color: #f1faee;
-  --nav-hover-link-color: #d16666;
-  --nav-hover-background-color: #a8dadc;
+  --headline-color-on-white: #E76F51;  /* headlines on a white background */ 
+  --headline-color-on-color: #fff; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #2a9d8f; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #264653 ;/* paragraph text on a colored background */ 
+  --paragraph-background-color: #F4A261   ;
+  --nav-link-color: #fff;
+  --nav-background-color: #E76F51;
+  --nav-hover-link-color: #264653;
+  --nav-hover-background-color: #2a9d8f;
 }
 
 
