added to my homepage

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -59,7 +59,7 @@ nav a:hover {
 .msg h2{
     color: #264653;
     font-family: Merienda, Helvetica, sans-serif;
-    font-size: .2em;
+    font-size: 22px;
     text-align: center;
 }
 
