--- a/positionstyles.css
+++ b/positionstyles.css
@@ -148,8 +148,8 @@
 /* Activity 5 styles */ 
 .content5 {
   /* This is the parent of the activity 5 boxes. */
-
-  height: 400px;
+  height: 100%;
+  /* height: 400px; */
 }
 .red5 { 
   width: 100%; 
