--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,7 +6,7 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #F4A261  ;
+  --primary-color: #e9c46a  ;
   --secondary-color: #E76F51  ;
   --accent1-color: #2a9d8f;
   --accent2-color: #264653;
@@ -17,15 +17,17 @@ Fonts are separated by a & */
   --paragraph-font: "Caveat", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #E76F51;  /* headlines on a white background */ 
-  --headline-color-on-color: #fff; /* headlines on a colored background */ 
+  --headline-color-on-white: #264653 ;  /* headlines on a white background */ 
+  --headline-color-on-color: #fff; /* headlines on a colored background */  
   --paragraph-color-on-white: #2a9d8f; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #264653 ;/* paragraph text on a colored background */ 
-  --paragraph-background-color: #F4A261   ;
-  --nav-link-color: #fff;
-  --nav-background-color: #E76F51;
-  --nav-hover-link-color: #264653;
-  --nav-hover-background-color: #2a9d8f;
+  --paragraph-color-on-color: #000 ;/* paragraph text on a colored background */ 
+  --paragraph-background-color: #e9c46a;
+  --nav-link-color: #E76F51;
+  /* --nav-background-color: #E76F51; */
+  --nav-background-color: rgb(231, 111, 81, 0.2);
+  /* --nav-hover-link-color: #264653; */
+  --nav-hover-link-color: #fff;
+  --nav-hover-background-color: rgb(42, 157, 143,0.2);
 }
 
 
