--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,30 +1,92 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@600&family=Merienda:wght@900&display=swap');
 
 #logo_link  {
-    padding-top: 5px;
+    padding-top: 10px;
+    padding-left: 5px;
+    justify-self: center;
+    align-self: center;
 } 
+
+.logo{
+    width: 100px;
+    height: 80px;
+    border-radius: 50%; 
+}
+
+body {
+    background-color:#e9c46a ; 
+    font-family: Caveat, Helvetica, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
 
 #content {
     max-width: 1600px;
     margin: 0 auto;
-    background-color:#e9c46a ;
+    z-index: -4; */
 }
 
-#background {
-    height: 725px;
-    background-color: #2a9d8f; 
+header {
+    display: grid;
+    grid-template-columns: 150px auto;
+    background-color:rgb(231, 111, 81, 0.2);
+    font-family: Merienda, Helvetica, sans-serif;
+}  
 
+nav {
+    display: flex;
+    justify-content: space-around;
 }
-
 nav a {
     padding: 35px;
     text-align: center;
     text-decoration: none;
-    color: #ffff;}
+    color: #E76F51;
+}
 
 nav a:hover {
-    background-color: #2a9d8f;
-    color: #264653;}
+    background-color: rgb(42, 157, 143,0.2);
+    /* color: #264653; */
+    color: #fff;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+
+}
+#hero-img {
+    width: 100% ;
+
+}
+.home-title { 
+    margin-top: 10px;
+    color: #fff;
+    font-family: Merienda, Helvetica, sans-serif;
+    font-size: 2em;
+    text-align: center;}
+
+#hero-msg h1, #hero-msg h4 {
+    text-align: center;
+    color: #fff;
+
+}
+
+.button-box {text-align: center;}
 
 .book, .join{
     margin-top: 50px;
@@ -39,23 +101,85 @@ nav a:hover {
 
 .book:hover, .join:hover{
     background-color: #2a9d8f;
-    color: #264653;}
+    color: #264653;
+}
 
-.logo{
-    width: 80px;
+main section {
+    box-sizing: border-box; 
+    text-align: center;}
+
+.home-grid{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr)
+
+}
+
+.card-img{
+    border: 10px solid #F4A261;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover {
+    /* transparent 40% */
+    opacity: .6; 
+    transform: scale(1.1);
+}
+
+.rivers-card {
+    margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card{
+    margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 
 .icon{
     width: 80px;
     padding-top: 10px;
 }
-.home-title { 
-    margin-top: 10px;
-    color: #264653;
-    font-family: Merienda, Helvetica, sans-serif;
-    font-size: 2em;
-    text-align: center;}
 
+h2{
+    margin: 0;
+}
+
+
+#background {
+    height: 725px;
+    background-color: #2a9d8f; 
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+
+.mountains{
+    margin: 100px 0;
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.msg {
+    background-color: #ffff;   
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    margin: 35px 0;
+    line-height: 1.5em;
+    box-shadow: 5px 5px 10px #6f7364;
+
+}
 .msg h2{
     color: #264653;
     font-family: Merienda, Helvetica, sans-serif;
@@ -63,66 +187,23 @@ nav a:hover {
     text-align: center;
 }
 
-h2{
-    margin: 0;
-}
-
-h4 {color: #fff;}
-
-.card-img{
-    border: 10px solid #F4A261;
-}
-.rivers-card, .camping-card, .rapids-card{
-    margin: 200px 0;
-}
-.mountains{
-    margin: 100px 0;
-}
-#hero-img {width: 100% ;}
-
-#hero-msg h1, #hero-msg h4 {text-align: center;}
-.button-box {text-align: center;}
-
 /* Now the border and image will be included in the size of those images. */
-main section {
-    box-sizing: border-box; 
-    text-align: center;}
 
-
-
- 
 .msg p{
     padding-bottom: 15px;
     font-size: .8em;
     text-align: center;  
-    color: #2a9d8f;}
-.msg {
-    margin: 35px 0;
-    padding: 35px;
-    background-color: #ffff;   
-    line-height: 1.5em;}
-
-body {
-    background-color: #F4A261; 
-    /* background-color: #ffff;  */
-    font-family: Caveat, Helvetica, sans-serif;
-    font-size: 22px;
-    margin: 0;
-    padding: 0;
+    color: #2a9d8f;
 }
 
-header {
-    background-color:#E76F51;
-    font-family: Merienda, Helvetica, sans-serif;
-
-}  
-
-
 footer{
-    margin-top: 200px;
-    padding: 25px 50px;
-    padding-top: 15px;
     background-color:#2A9D8F;
+    padding: 25px 50px;
+    margin-top: 200px;
+    padding-top: 15px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     color: #000;
 }
 .social image{
@@ -143,3 +224,45 @@ footer p {
 footer p a:hover {
     text-decoration: underline;
 }    
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
