added to my homepage

--- a/ballet/styles/site-plan.css
+++ b/ballet/styles/site-plan.css
@@ -1,7 +1,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lobster&family=Moon+Dance&family=Zeyada&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Moon+Dance&family=Playfair+Display&family=Zeyada&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -11,9 +11,9 @@ Fonts are separated by a | */
   --accent2-color: #4e4d5c;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Dancing Script","Zeyada", "Lobster", Helvetica;
-  --paragraph-font: "Moon Dance", "Zeyada", Helvetica, sans-serif;
-  font-display: swap;
+  --heading-font: "Dancing Script", sans-serif, Helvetica;
+  --paragraph-font:  "Playfair", sans-serif, Helvetica;
+
 
 
   /* these colors below should be chosen from among your palette colors above */
