--- a/practice/styles/w09_challenge.css
+++ b/practice/styles/w09_challenge.css
@@ -54,7 +54,7 @@ main {
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     color: gray;
-    /* overflow: scroll; */
+    overflow: hidden;
 }
 
 .social {
