--- a/wwr/styles/rafting-route.css
+++ b/wwr/styles/rafting-route.css
@@ -216,6 +216,96 @@ main img{
     color: #264653;
 }
 
+#feedback {
+    background-color: antiquewhite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;
+    /* make this element invisible until we are ready for it */
+    display: none;      
+}
+
+form {
+    /* Center the form on the page */
+    margin: 0 auto;
+    width: 400px;
+    /* Form outline */
+    padding: 1em;
+    border: 1px solid #E76F51 ;
+    border-radius: 1em;
+  }
+    
+.field1-grid {
+    margin-top: 1em;
+  }
+  
+  label {
+    /* Uniform size & alignment */
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+  }
+  
+  input,
+  textarea {
+    margin: 10px;
+    /* To make sure that all text fields have the same font settings
+       By default, textareas have a monospace font */
+    font: 1em sans-serif;
+  
+    /* Uniform text field size */
+    width: 300px;
+    box-sizing: border-box;
+  
+    /* Match form field borders */
+    border: 1px solid #2a9d8f;
+  }
+  
+  input:focus,
+  textarea:focus {
+    /* Additional highlight for focused elements */
+    border-color: #E76F51 3;
+  }
+  
+  textarea {
+    /* Align multiline text fields with their labels */
+    vertical-align: top;
+    /* Provide space to type some text */
+    height: 5em;
+  }
+  
+  .button {
+    /* Align buttons with the text fields */
+    align-self: center;
+    align-items: center;
+  }
+
+  .button:hover{
+    background-color: #2a9d8f;
+    color: #264653;
+}
+  
+  button {
+    /* This extra margin represent roughly the same space as the space
+       between the labels and their text fields */
+    margin-top: 0.5em;
+    margin-left: 0.5em;
+    padding: 10px;
+    border-radius: 5px;
+    font-family: "Caveat", Helvetica, sans-serif;
+    font-size: 1em;
+    text-align: center;
+    text-decoration: none;
+    background-color:#E76F51 ;
+    color: #ffff;
+  }
+.moveDown {
+    margin-top: 3em;
+
+}
+    
 
 footer{
     background-color:#2A9D8F;
