--- a/ballet/styles/site-plan.css
+++ b/ballet/styles/site-plan.css
@@ -12,7 +12,7 @@ Fonts are separated by a | */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Dancing Script", sans-serif, Helvetica;
-  --paragraph-font:  "Playfair", sans-serif, Helvetica;
+  --paragraph-font:  Arial, sans-serif, Helvetica;
 
 
 
