--- a/ballet/styles/style.css
+++ b/ballet/styles/style.css
@@ -325,6 +325,12 @@ from {opacity: .5}
 to {opacity: 1}
 }
 
+/* .dot-block {
+    grid-column: 1/4;
+    grid-row: 4/5;
+    text-align: center;
+} */
+
 .music img{
     width: 100%;
     height:1000px;
@@ -351,6 +357,21 @@ to {opacity: 1}
     line-height: 1.5em;
     box-shadow: 5px 5px 10px #6f7364;
 }
+
+
+/* The dots/bullets/indicators */
+/* .dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  } */
+  
+  
+
 .dress-img {
     margin-top: 10px;
     grid-column: 3/9;
@@ -582,7 +603,10 @@ footer p a:hover {
     text-decoration: underline;
 }    
 
+
+    /* On smaller screens, decrease text size */
 @media screen and (max-width: 900px) {
+    
 
     header, nav, main, footer {
         display: block;
