--- a/ballet/styles/style.css
+++ b/ballet/styles/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Moon+Dance&family=Playfair+Display&family=Zeyada&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Calligraffitti&family=Dancing+Script&family=Playfair+Display&family=Zeyada&display=swap');
 
 
 #logo_link  {
@@ -16,7 +16,7 @@
 
 body {
     background-color:#fff5f2;
-    font-family: Arial, sans-serif, Helvetica;
+    font-family:  "Playfair Display", sans-serif, Helvetica;
     font-size: 30px;
     margin: 0;
     padding: 0;
@@ -32,7 +32,7 @@ header {
     display: grid;
     grid-template-columns: 150px auto;
     background-color:hsl(333, 69%, 62%, 0.2);
-    font-family: Arial, sans-serif, Helvetica;
+    font-family: "Playfair Display", sans-serif, Helvetica;
 }  
 
 nav {
@@ -69,12 +69,6 @@ nav a:hover {
     margin-top: 600px;
 }
 
-#hero-msg h4, #hero-msg h5 {
-    text-align: center;
-    color: #e15a97;
-
-}
-
 .credit {
     text-align: center;
     color: #4e4d5c;  
@@ -86,42 +80,60 @@ nav a:hover {
 
 }
 
-.home-title { 
-    margin-top: 10px;
-    color: #e15a97;
-    font-family: "Dancing Script", sans-serif, Helvetica;
-    font-size: 2em;
-    text-align: center;
-}
-
 .home-grid { 
-    /* max-width: 1600px; */
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     margin-top: 10px;
     color: #6d98ba;
-    font-family: Arial, sans-serif, Helvetica;
     font-size: 1em;
     justify-content: center;
     align-content: center;
   }
 
 main section {
-    box-sizing: border-box; 
+    max-width: 1600px;;
     align-self: center;
     justify-self: center;
 }
-main h1, h2, h3, h4, h5, h6, .heading {
+
+.home-title { 
+    margin-top: 10px;
+    color: #e15a97;
+    font-family: "Dancing Script", "Calligraffitti",  cursive;
+    font-size: 2em;
+    text-align: center;
+}
+
+main h1, h2, h3, h4, .heading, .firstletter  {
+    font-family: "Dancing Script", "Calligraffitti",  cursive;
     margin-top: 10px;
     text-align: center;
     justify-items: center;
     align-items: center;
-    font-size: 50px;
-    color:#6d98ba;
+    font-size: 2em;
+    /* color:#6d98ba; */
+    color: #e15a97;
 }
 
+main h4 {
+    font-family: "Dancing Script", "Calligraffitti",  cursive;
+    margin-top: 10px;
+    text-align: center;
+    justify-items: center;
+    align-items: center;
+    font-size: 2em;
+    color: #e15a97;
+}
+
+/* .firstletter {
+    margin: 10px;
+    font-family: "Dancing Script", "Calligraffitti",  cursive;
+    font-size: 2em;
+    color: #e15a97;
+    text-align: left;
+  } */
+
 main img{
-    /* width: 1600px; */
     border: 10px solid #e15a97;
     width: 1600px;
     transition: transform .5s;
@@ -134,33 +146,16 @@ main img:hover {
     transform: scale(1.1);
 }
 
-.firstletter {
-    margin: 10px;
-    font-family: "Dancing Script", sans-serif, Helvetica;
-    font-size: 60px;
-    color: #e15a97;
-    text-align: left;
-  }
 
-.firstletter:hover {
-    font-weight:bolder;
-    transform: scale(1.1);
-}
+
 
 .title{
-    font-family: Arial, sans-serif, Helvetica;
-    font-size: 30px;
+    font-family: "Playfair Display", sans-serif, Helvetica;
+    font-size: 1em;
     font-weight:bolder;
     color:  #6d98ba;
   }
 
-.sub-title {
-    font-family: Arial, sans-serif, Helvetica;
-    font-size: 30px;
-    text-decoration: underline;
-    padding-left: 30px;
-    color:  #6d98ba;
-}
 
 .fundation {
     grid-row: 1/2;
@@ -174,14 +169,15 @@ main img:hover {
     grid-column: 3/9;
 }
 
-.fundation p, .benefits p , .dress-msg p, .hand-msg p, .feet-msg p{
+.fundation p, .benefits p , .dress-msg p{
     grid-column: 3/9;
     padding-top: 2px;
     width: 1600px;
-    font-family: Arial, sans-serif, Helvetica;
-    font-size: 30px;
+    font-family: "Playfair Display", sans-serif, Helvetica;
+    /* font-size: 30px; */
     color: #6d98ba;
     text-align: left;
+    line-height: 1.5em;
 }
 
 
@@ -189,7 +185,7 @@ main img:hover {
     grid-column: 3/9;
     padding-top: 2px;
     width: 1600px;
-    font-family: Arial, sans-serif, Helvetica;
+    font-family: "Playfair Display", sans-serif, Helvetica;
     font-size: 30px;
     color: #6d98ba;
     align-items: center;
@@ -231,72 +227,63 @@ main img:hover {
 .movement {
     grid-column: 3/9;
     grid-row: 4/9;
-    display: grid;
-    grid-template-rows: 0.5fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    /* display: grid;
+    grid-template-rows: auto ; */
+}
+
+.movement div{
+    width: 1600px;
+    box-sizing: border-box;    
+    padding-top: 10px;
 }
 
 #exercise {
     grid-column: 3/9;
     grid-row: 1/2;
     justify-self: left;
-    padding: 10px;
-
+    padding-top: 10px;
 }
 
 #port {
     grid-column: 3/9;
-    grid-row: 2/3;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);  
-    /* grid-template-rows: repeat(2, 1fr);     */
+    grid-row: 1/2;
 }
 
 #pile {
     grid-column: 3/9;
-    grid-row: 3/4;
+    grid-row: 2/3;
     display: grid;
     grid-template-columns: repeat(2, 1fr);    
-    grid-template-rows: repeat(2, 1fr);
 }
 
 #eleves {
     grid-column: 3/9;
-    grid-row: 4/5;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);    
-    /* grid-template-rows: repeat(2, 1fr); */
+    grid-row: 3/4;
 }
 
 #tendu {
     grid-column: 3/9;
-    grid-row: 5/6;
+    grid-row: 4/5;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);    
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);    
 }
 
 #degages {
     grid-column: 3/9;
-    grid-row: 6/7;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);    
-    /* grid-template-rows: repeat(2, 1fr); */
+    grid-row: 5/6;
+
 }
 
 #round {
     grid-column: 3/9;
-    grid-row: 7/8;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);    
-    /* grid-template-rows: repeat(2, 1fr); */
+    grid-row: 6/7;
+
 }
 
 #sautes {
     grid-column: 3/9;
-    grid-row: 8/9;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);    
-    /* grid-template-rows: repeat(2, 1fr); */
+    grid-row: 7/8;
+
 }
 
 .music{
@@ -308,7 +295,7 @@ main img:hover {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);   
     position: relative;
-    margin: 0;
+    margin-top: 10px;
 }
 .fade {
     animation-name: fade;
@@ -325,11 +312,7 @@ from {opacity: .5}
 to {opacity: 1}
 }
 
-/* .dot-block {
-    grid-column: 1/4;
-    grid-row: 4/5;
-    text-align: center;
-} */
+
 
 .music img{
     width: 100%;
@@ -341,16 +324,18 @@ to {opacity: 1}
     height:300px;
 }
 
-.music h1 {
-    margin: 10px;
-    padding: 10px;
-    grid-column: 1/2;
+.music h4 {
+    /* margin: 10px; */
+    padding-top: 10px;
+    grid-column: 1/5;
     grid-row: 1/2;
+    text-align: center;
+
 }
 
 .music-msg {
     background-color: #ffff;   
-    padding: 10px;
+    padding: 18px;
     grid-column: 3/5;
     grid-row: 3/5;
     margin: 35px 0;
@@ -358,19 +343,6 @@ to {opacity: 1}
     box-shadow: 5px 5px 10px #6f7364;
 }
 
-
-/* The dots/bullets/indicators */
-/* .dot {
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-  } */
-  
-  
 
 .dress-img {
     margin-top: 10px;
@@ -382,15 +354,49 @@ to {opacity: 1}
 }
 .dress-msg {
     grid-column: 3/9;
-    /* grid-row: 2/3; */
+    line-height: 1.5em;
 
 }
 
-.bun img, .bun p , .shoes img, .shoes p, .movement img, .movement p{
-        width: 800px;
-        text-align: left;
+.bun img, .bun p , .shoes img, .shoes p, .tendu-img2 img , .pile-img img, .pile-img2 img{
+    width: 800px;
+    text-align: left;
+
 }
 
+.pile-img, .tendu-img, .sautes-img .port img,  .eleves img, .degages img, .round img {
+    align-self: center;
+    justify-self: left;
+
+}
+.pile-msg, .tendu-msg, .sautes-msg, .port-msg, .eleves-msg, .degages-msg, .round-msg {
+    padding-left: 10px;
+    align-self: center;
+    justify-self: center;
+    line-height: 1.5em;
+}
+
+.pile-img2, .tendu-img2 {
+    grid-column: 1/3;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-self: center;
+}
+
+.tendu-img{
+    grid-row: 1/2;
+}
+
+.tendu-img2{
+    grid-row: 2/3;
+    align-content: center;
+    justify-self: center;
+}
+
+.tendu-img2 p{
+    padding-left: 100px;
+
+}
 
 .bun-img {
     margin-top: 10px;
@@ -409,11 +415,12 @@ to {opacity: 1}
     grid-row: 3/4;
     align-content: center;
     justify-self: center;
+    line-height: 1.5em;
 }
 
 .shoes-img {
     margin-top: 10px;
-    padding: 10px;
+    padding-left: 10px;
     grid-column: 2/3;
     grid-row: 4/5;
     align-self:center;
@@ -427,6 +434,9 @@ to {opacity: 1}
     padding-right: 10px;
     grid-column: 1/2;
     grid-row: 4/5;
+    line-height: 1.5em;
+    align-self:center;
+    justify-self: center;
 }
 
 .hand-img, .feet-img {
@@ -437,48 +447,21 @@ to {opacity: 1}
 
 }
 .hand-msg, .feet-msg {
+    padding-left: 10px;
     grid-column: 3/9;
+    line-height: 1.5em;
 
 }
 
 
-.pile-img, .tendu-img, .sautes-img .port img,  .eleves img, .degages img, .round img {
-    margin-top: 20px;
-    padding-top: 10px;
-    grid-column: 1/2;
-    grid-row: 1/2;
-    align-self: center;
-    justify-self: left;
 
-}
-.pile-msg, .tendu-msg, .sautes-msg, .port-msg, .eleves-msg, .degages-msg, .round-msg {
-    margin-top: 100px;
-    padding-top: 10px;
-    padding-left: 20px;
-    grid-column: 2/3;
-    grid-row: 1/2;
-    align-self: center;
-    justify-self: center;
-
-}
-
-.pile-img2, .tendu-img2 {
-    margin-top: 10px;
-    grid-column: 1/3;
-    grid-row: 2/3;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    justify-self: center;
-}
 
 #demi{
     grid-column: 1/2;
-    grid-row: 1/2;
 }
 
 #grand{
     grid-column: 2/3;
-    grid-row: 1/2;
 }
 
 
