--- a/ballet/styles/style.css
+++ b/ballet/styles/style.css
@@ -602,7 +602,7 @@ footer p a:hover {
         font-size: 25px;
         color: #6f7364;
     }
-    .fundation,.benefits, .dress, .bun , .terms, .shoes, .hand, .feet, .grand, .movement, #exercise, #port , #pile, #eleves, #tendu ,#degages ,#round ,#sautes , .music, .fade { 
+    .fundation,.benefits, .dress, .bun , .terms, .shoes, .hand, .feet, .grand, .movement,.movement div, #exercise, #port , #pile, #eleves, #tendu ,#degages ,#round ,#sautes, #demi, #grand , .music, .fade { 
         display: block;
         height: auto;
         margin: 50px auto;
@@ -610,11 +610,18 @@ footer p a:hover {
 
     }
 
-    .music img,.dress-img,.bun-img,.shoes-img, .hand-img, .feet-img,  .fundation-img, .terms-img, .pile-img, .tendu-img, .sautes-img .port img,  .eleves img, .degages img, .round img, .pile-img2, .tendu-img2, .tendu-img, .tendu-img2  { 
+    .music img,.dress-img,.bun-img,.shoes-img, .hand-img, .feet-img, .fundation-img, .terms-img, .pile-img, .tendu-img, .sautes-img .port img,  .eleves img, .degages img, .round img, .pile-img2, .tendu-img2, .tendu-img, .tendu-img2  { 
         margin: 50px auto;
         width: 80%;
-
     }
+
+    .fundation-ballet, .benefits-ballet, .dress-msg, .bun-msg, .shoes-msg, .hand-msg, .feet-msg, .pile-msg, .tendu-msg, .sautes-msg, .port-msg, .eleves-msg, .degages-msg, .round-msg {
+        display: block;
+        height: auto;
+        margin: 50px auto;
+        width: 60%;
+    }
+
     .music,  .music-msg {
         width: 80%;
         display: block;
