--- a/ballet/styles/style.css
+++ b/ballet/styles/style.css
@@ -579,9 +579,6 @@ footer p a:hover {
         height: auto;
     } 
 
-    #hero {
-        z-index: 1;
-    }
 
     nav, footer {
         flex-direction: column;
@@ -609,20 +606,20 @@ footer p a:hover {
     .fundation,.benefits,  .fundation-ballet, .benefits-ballet, .dress, .bun , .terms, .shoes, .hand, .feet, .grand, .movement,.movement div, #exercise, #port , #pile, #eleves, #tendu ,#degages ,#round ,#sautes, #demi, #grand , .music, .fade { 
         display: block;
         height: auto;
-        margin: 50px auto;
+        margin: 0 auto;
         width: 80%;
 
     }
 
     .music img,.dress-img,.bun-img, .bun-msg, .shoes-img, .hand-img, .feet-img, .fundation-img, .terms-img, .pile-img, .tendu-img, .sautes-img .port img,  .eleves img, .degages img, .round img, .pile-img2, .tendu-img2, .tendu-img, .tendu-img2  { 
-        margin: 50px auto;
+        margin: 0 auto;
         width: 80%;
     }
 
     .dress-msg, .shoes-msg, .hand-msg, .feet-msg, .pile-msg, .tendu-msg, .sautes-msg, .port-msg, .eleves-msg, .degages-msg, .round-msg {
         display: block;
         height: auto;
-        margin: 50px auto;
+        margin: 0 auto;
         width: 80%;
     }
 
