--- a/ballet/styles/style.css
+++ b/ballet/styles/style.css
@@ -597,10 +597,10 @@ footer p a:hover {
 
     main h1, h2, h3, h4, .heading, .firstletter, .title{
         font-size: 25px;
-        width: 80%;    
+        width: 100%;    
     }
 
-    main img {
+    main img, p {
         max-width: 900px
     }
     .home-title {
