--- a/ballet/styles/style.css
+++ b/ballet/styles/style.css
@@ -574,7 +574,6 @@ footer p a:hover {
     
 
     header, nav, main, footer, .home-grid{
-        width: auto;
         display: block;
         height: auto;
     } 
@@ -618,18 +617,21 @@ footer p a:hover {
     .music img,.dress-img,.bun-img, .bun-msg, .shoes-img, .hand-img, .feet-img, .fundation-img, .terms-img, .pile-img, .tendu-img, .sautes-img .port img,  .eleves img, .degages img, .round img, .pile-img2, .tendu-img2, .tendu-img, .tendu-img2  { 
         margin: 0 auto;
         width: 60%;
+        max-width: 900px
     }
 
     .dress-msg, .shoes-msg, .hand-msg, .feet-msg, .pile-msg, .tendu-msg, .sautes-msg, .port-msg, .eleves-msg, .degages-msg, .round-msg {
         height: auto;
         margin: 0 auto;
         width: 60%;
+        max-width: 900px
     }
 
     .music,  .music-msg {
         width: 80%;
         display: block;
         margin: 0 auto;
+        max-width: 900px
     }
 
     footer {
